--- a/404.html
+++ b/404.html
@@ -64,20 +64,18 @@
 
       <div class="container">
          <nav class="navbar navbar-expand-xl">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/">
                <img src="assets/nav-brand.png" alt="ReelRusher" style="width: auto; height: 60px;">
             </a>
 
-            <!-- Navbar Toggler -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#fandiNav" aria-controls="fandiNav" aria-expanded="false" aria-label="Toggle navigation">
                <i class="ti ti-menu-deep"></i>
             </button>
 
-            <!-- Navbar Nav -->
             <div class="collapse navbar-collapse justify-content-end" id="fandiNav">
                <ul class="navbar-nav align-items-xl-center navbar-nav-scroll mt-4 mt-xl-0">
                   <li>
-                     <a href="index.html">Ana Sayfa</a>
+                     <a href="/">Ana Sayfa</a>
                   </li>
                   <li class="fandi-dd">
                      <a href="#">Oyun Hakkında <i class="ti ti-chevron-down"></i></a>
@@ -112,42 +110,35 @@
       </div>
    </header>
 
-   <!-- Breadcrumb Section -->
    <div class="breadcrumb-section bg-img jarallax">
       <img class="jarallax-img" src="assets/73-WKNjS6Ql.jpg" alt="">
 
       <div class="container">
-         <!-- Divider -->
          <div class="divider"></div>
 
-         <!-- Breadcrumb Content -->
          <div class="breadcrumb-content">
             <h2>Sayfa Bulunamadı</h2>
             <ul class="list-unstyled">
-               <li><a href="index.html">Ana Sayfa</a></li>
+               <li><a href="/">Ana Sayfa</a></li>
                <li>404 Hata</li>
             </ul>
          </div>
       </div>
 
-      <!-- Divider -->
       <div class="divider"></div>
    </div>
 
-   <!-- Error Section -->
    <div class="error-section">
-      <!-- Divider -->
       <div class="divider"></div>
 
       <div class="container">
          <div class="row justify-content-center">
             <div class="col-12 col-sm-10 col-md-8 col-lg-6">
-               <!-- Error Content -->
                <div class="error-content text-center">
                   <img class="mb-4" src="assets/404-BDsgtSdP.png" alt="">
                   <p class="mb-5 px-md-5">Üzgünüz, aradığınız sayfa mevcut değil. Bir sorun olduğunu düşünüyorsanız, 
                      lütfen bizimle iletişime geçin veya ana sayfaya dönün.</p>
-                  <a href="index.html" class="btn btn-primary">
+                  <a href="/" class="btn btn-primary">
                      <span>Ana Sayfaya Dön <i class="ti ti-arrow-up-right"></i></span>
                      <span>Ana Sayfaya Dön <i class="ti ti-arrow-up-right"></i></span>
                   </a>
@@ -156,20 +147,16 @@
          </div>
       </div>
 
-      <!-- Divider -->
       <div class="divider"></div>
    </div>
- <!-- Footer Section -->
    <footer class="footer-section" style="background-color: #174035;">
-      <!-- Divider -->
       <div class="divider"></div>
 
       <div class="container">
          <div class="row g-5">
-            <!-- Footer Card -->
             <div class="col-12 col-md-4">
                <div class="footer-card">
-                  <a href="index.html" class="footer-logo mb-4">
+                  <a href="/" class="footer-logo mb-4">
                      <img src="assets/nav-brand-footer.png" alt="ReelRusher">
                   </a>
                   <p style="color: #E8F5E8;">ReelRusher - Match-3 ve Zuma mekaniklerini birleştiren, piramit şeklinde tahta ile benzersiz bir puzzle oyun deneyimi.</p>
@@ -177,7 +164,6 @@
                </div>
             </div>
 
-            <!-- Footer Card -->
             <div class="col-12 col-md">
                <div class="footer-card">
                   <h4 class="mb-4" style="color: #FFFFFF;">Oyun Hakkında</h4>
@@ -191,12 +177,11 @@
                </div>
             </div>
 
-            <!-- Footer Card -->
             <div class="col-12 col-md">
                <div class="footer-card">
                   <h4 class="mb-4" style="color: #FFFFFF;">Faydalı Bağlantılar</h4>
                   <ul class="list-unstyled footer-nav-two">
-                     <li><a href="index.html" style="color: #E8F5E8;">Ana Sayfa</a></li>
+                     <li><a href="/" style="color: #E8F5E8;">Ana Sayfa</a></li>
                      <li><a href="about-us.html" style="color: #E8F5E8;">Hakkımızda</a></li>
                      <li><a href="contact.html" style="color: #E8F5E8;">İletişim</a></li>
                 
@@ -204,7 +189,6 @@
                </div>
             </div>
 
-            <!-- Footer Card -->
             <div class="col-12 col-md">
                <div class="footer-card">
                   <h4 class="mb-4" style="color: #FFFFFF;">İletişim</h4>
@@ -234,16 +218,13 @@
          </div>
       </div>
 
-      <!-- Copyright -->
       <div class="copyright-section style-two" style="background-color: #174035;">
          <div class="container">
             <div class="d-flex flex-wrap justify-content-center align-items-center justify-content-md-between gap-3 gap-lg-4">
-               <!-- Copyright -->
                <p class="mb-0 copyright justify-content-center justify-content-md-end" style="color: #E8F5E8;"><span id="year">2025</span> © 
                   <a href="#" style="color: #FFFFFF;">ReelRusher</a>
                   Tüm hakları saklıdır.</p>
 
-               <!-- Copyright Nav -->
                <ul class="copyright-nav style-two justify-content-center list-unstyled d-flex flex-wrap gap-3 gap-lg-4">
                   <li><a href="privacy-policy.html" style="color: #E8F5E8;">Gizlilik ve Çerez Politikası</a></li>
                   <li><a href="terms-of-use.html" style="color: #E8F5E8;">Kullanım Koşulları</a></li>
@@ -253,14 +234,12 @@
       </div>
    </footer>
 
-   <!-- Cookie Alert -->
    <div class="cookiealert shadow-lg">
       <h4 class="text-white"><i class="ti ti-cookie"></i> Çerez Uyarısı</h4>
       <p class="mb-4 text-white">Web sitemizde en iyi deneyimi yaşamanız için çerezleri kullanıyoruz. Devam ederek çerez kullanımını kabul etmiş olursunuz. <a href="privacy-policy.html" target="_blank">Çerez Politikası</a> için tıklayın.</p>
       <button class="btn btn-dark btn-sm acceptcookies" type="button" aria-label="Close">Kabul Et</button>
    </div>
 
-   <!-- Scroll To Top -->
    <button id="scrollTopButton" class="fandi-scrolltop scrolltop-hide">
       <i class="ti ti-arrow-up"></i>
    </button>
