--- a/mechanics.html
+++ b/mechanics.html
@@ -7,7 +7,6 @@
    <meta name="description" content="ReelRusher - Oyun Mekanikleri | Match-3 ve Zuma hibrit mekanikleri">
    <meta name="robots" content="index, follow">
 
-   <!-- Open Graph Meta Tags -->
    <meta property="og:title" content="Oyun Mekanikleri | ReelRusher">
    <meta property="og:description" content="ReelRusher'ın benzersiz oyun mekaniği hakkında detaylı bilgi. Match-3 ve Zuma hibrit sistemi nasıl çalışır?">
    <meta property="og:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
@@ -16,7 +15,6 @@
    <meta property="og:site_name" content="ReelRusher">
    <meta property="og:locale" content="tr_TR">
 
-   <!-- Twitter Card Meta Tags -->
    <meta name="twitter:card" content="summary_large_image">
    <meta name="twitter:title" content="Oyun Mekanikleri | ReelRusher">
    <meta name="twitter:description" content="ReelRusher'ın benzersiz oyun mekaniği hakkında detaylı bilgi. Match-3 ve Zuma hibrit sistemi nasıl çalışır?">
@@ -24,7 +22,6 @@
    <meta name="twitter:site" content="@reelrusher">
    <meta name="twitter:creator" content="@reelrusher">
 
-   <!-- Title & Favicon -->
    <title>Oyun Mekanikleri | ReelRusher - Match-3 Puzzle Oyunu</title>
    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
   <script type="module" crossorigin src="assets/main-DwB1b1zN.js"></script>
@@ -35,7 +32,6 @@
 
 <body>
 
-   <!-- Preloader -->
    <div class="preloader" id="preloader">
       <div class="spinner-grow" role="status">
          <span class="visually-hidden">Loading...</span>
@@ -43,13 +39,10 @@
    </div>
 
   
-   <!-- Header Area -->
    <header class="header-area">
-      <!-- Header Top -->
       <div class="header-top">
          <div class="container h-100">
             <div class="h-100 d-flex align-items-center justify-content-between">
-               <!-- Left Side Content -->
                     <div class="left-side d-flex align-items-center gap-2 gap-md-3 gap-lg-4">
                      <div class="d-flex align-items-center gap-1">
                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewbox="0 0 18 18" fill="none">
@@ -79,30 +72,25 @@
                      </div>
                     </div>
 
-               <!-- Right Side Content -->
              
             </div>
          </div>
       </div>
 
-      <!-- Navbar -->
       <div class="container">
          <nav class="navbar navbar-expand-xl">
-            <!-- Navbar Brand -->
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/">
                <img src="assets/nav-brand.png" alt="ReelRusher" style="width: auto; height: 60px;">
             </a>
 
-            <!-- Navbar Toggler -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#fandiNav" aria-controls="fandiNav" aria-expanded="false" aria-label="Toggle navigation">
                <i class="ti ti-menu-deep"></i>
             </button>
 
-            <!-- Navbar Nav -->
             <div class="collapse navbar-collapse justify-content-end" id="fandiNav">
                <ul class="navbar-nav align-items-xl-center navbar-nav-scroll mt-4 mt-xl-0">
                   <li>
-                     <a href="index.html">Ana Sayfa</a>
+                     <a href="/">Ana Sayfa</a>
                   </li>
                   <li class="fandi-dd active">
                      <a href="#">Oyun Hakkında <i class="ti ti-chevron-down"></i></a>
@@ -137,31 +125,25 @@
       </div>
    </header>
 
-   <!-- Breadcrumb Section -->
    <div class="breadcrumb-section bg-img jarallax">
       <img class="jarallax-img" src="assets/73-WKNjS6Ql.jpg" alt="">
 
       <div class="container">
-         <!-- Divider -->
          <div class="divider"></div>
 
-         <!-- Breadcrumb Content -->
          <div class="breadcrumb-content">
             <h2>Oyun Mekanikleri</h2>
             <ul class="list-unstyled">
-               <li><a href="index.html">Ana Sayfa</a></li>
+               <li><a href="/">Ana Sayfa</a></li>
                <li>Oyun Mekanikleri</li>
             </ul>
          </div>
       </div>
 
-      <!-- Divider -->
       <div class="divider"></div>
    </div>
 
-    <!-- Service Details Section -->
    <div class="service-details-section">
-      <!-- Divider -->
       <div class="divider"></div>
 
       <div class="container">
@@ -208,7 +190,6 @@
 
             <div class="col-12 col-md-5 col-lg-4">
                <div class="d-flex flex-column gap-5">
-                  <!-- Widget -->
                   <div class="blog-widget">
                      <h4 class="h4 mb-4 widget-title"><span></span> Oyun Kategorileri</h4>
 
@@ -234,7 +215,6 @@
                      </ul>
                   </div>
 
-                  <!-- Widget -->
                   <div class="blog-widget text-center">
                      <h2 class="mb-4">Sorularınız mı var?</h2>
                      <p>info@reelrusher.com</p>
@@ -249,19 +229,15 @@
          </div>
       </div>
 
-      <!-- Divider -->
       <div class="divider"></div>
    </div>
 
-   <!-- Testimonial Wrapper -->
    <section class="testimonial-section bg-secondary">
-      <!-- Divider -->
       <div class="divider"></div>
 
       <div class="container">
          <div class="row align-items-center g-4">
             <div class="col-6 col-sm">
-               <!-- Previous Button -->
                <div class="testimonial-three-button-prev">
                   <i class="ti ti-arrow-narrow-left"></i>
                </div>
@@ -270,17 +246,14 @@
             <div class="col-12 col-sm-8 col-lg-9 testimonial-col">
                <div class="swiper testimonial-swiper-three" id="testimonialSwiperThree">
                                     <div class="swiper-wrapper">
-                     <!-- Testimonial Card -->
                      <div class="swiper-slide">
                         <div class="testimonial-card-three">
-                           <!-- Quote Icon -->
                            <div class="quote-icon mb-3">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewbox="0 0 40 40" fill="none">
                               <path d="M8.33333 25H15L10 35H5L8.33333 25ZM25 25H31.6667L26.6667 35H21.6667L25 25Z" fill="#174035"/>
                             </svg>
                            </div>
                            <p class="testimonial-text">Klasik seviyeler: Temel eşleştirme mekaniği ile piramit yapısını temizleyin. Bu seviyelerde zaman baskısı yoktur, sadece strateji ve doğru hamleler önemlidir.</p>
-                           <!-- Testimonial Info -->
                            <div class="testimonial-info">
                               <h4 class="mb-1">Klasik Seviyeler</h4>
                               <p class="mb-0">Temel Mod</p>
@@ -288,17 +261,14 @@
                         </div>
                      </div>
 
-                     <!-- Testimonial Card -->
                      <div class="swiper-slide">
                         <div class="testimonial-card-three">
-                           <!-- Quote Icon -->
                            <div class="quote-icon mb-3">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewbox="0 0 40 40" fill="none">
                               <path d="M8.33333 25H15L10 35H5L8.33333 25ZM25 25H31.6667L26.6667 35H21.6667L25 25Z" fill="#174035"/>
                             </svg>
                            </div>
                            <p class="testimonial-text">Zaman yarışı seviyeleri: Süre dolmadan piramidi temizlemeniz gereken heyecanlı modlarda özel güçler ve hızlı düşünme kritik öneme sahiptir.</p>
-                           <!-- Testimonial Info -->
                            <div class="testimonial-info">
                               <h4 class="mb-1">Zaman Yarışı</h4>
                               <p class="mb-0">Hızlı Mod</p>
@@ -310,7 +280,6 @@
             </div>
 
             <div class="col-6 col-sm">
-               <!-- Next Button -->
                <div class="text-end">
                   <div class="testimonial-three-button-next ms-auto">
                      <i class="ti ti-arrow-narrow-right"></i>
@@ -320,18 +289,14 @@
          </div>
       </div>
 
-      <!-- Divider -->
       <div class="divider"></div>
    </section>
 
-   <!-- FAQ Wrapper -->
    <section class="faq-section">
-      <!-- Divider -->
       <div class="divider"></div>
 
       <div class="container">
          <div class="row g-5">
-            <!-- Section Heading -->
             <div class="col-12 col-md-6">
                <div class="faq-img pe-xl-5">
                   <img src="assets/27-B3OWt_NY.jpg" alt="">
@@ -344,10 +309,8 @@
                   <p class="mb-5">ReelRusher oyun mekanikleri hakkında en çok merak edilen sorular ve detaylı cevapları burada yer almaktadır.</p>
                </div>
 
-               <!-- FAQ Accordion -->
                <div class="faq-accordion">
                   <div class="accordion" id="faqAccordion">
-                     <!-- Accordion Item -->
                      <div class="accordion-item">
                         <div class="accordion-header">
                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faqQuestion1" aria-expanded="true" aria-controls="faqQuestion1">
@@ -361,7 +324,6 @@
                         </div>
                      </div>
 
-                     <!-- Accordion Item -->
                      <div class="accordion-item">
                         <div class="accordion-header">
                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqQuestion2" aria-expanded="false" aria-controls="faqQuestion2">
@@ -375,7 +337,6 @@
                         </div>
                      </div>
 
-                     <!-- Accordion Item -->
                      <div class="accordion-item">
                         <div class="accordion-header">
                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqQuestion3" aria-expanded="false" aria-controls="faqQuestion3">
@@ -395,22 +356,18 @@
          </div>
       </div>
 
-      <!-- Divider -->
       <div class="divider"></div>
    </section>
 
 
-    <!-- Footer Section -->
    <footer class="footer-section" style="background-color: #174035;">
-      <!-- Divider -->
       <div class="divider"></div>
 
       <div class="container">
          <div class="row g-5">
-            <!-- Footer Card -->
             <div class="col-12 col-md-4">
                <div class="footer-card">
-                  <a href="index.html" class="footer-logo mb-4">
+                  <a href="/" class="footer-logo mb-4">
                      <img src="assets/nav-brand-footer.png" alt="ReelRusher">
                   </a>
                   <p style="color: #E8F5E8;">ReelRusher - Match-3 ve Zuma mekaniklerini birleştiren, piramit şeklinde tahta ile benzersiz bir puzzle oyun deneyimi.</p>
@@ -418,7 +375,6 @@
                </div>
             </div>
 
-            <!-- Footer Card -->
             <div class="col-12 col-md">
                <div class="footer-card">
                   <h4 class="mb-4" style="color: #FFFFFF;">Oyun Hakkında</h4>
@@ -432,12 +388,11 @@
                </div>
             </div>
 
-            <!-- Footer Card -->
             <div class="col-12 col-md">
                <div class="footer-card">
                   <h4 class="mb-4" style="color: #FFFFFF;">Faydalı Bağlantılar</h4>
                   <ul class="list-unstyled footer-nav-two">
-                     <li><a href="index.html" style="color: #E8F5E8;">Ana Sayfa</a></li>
+                     <li><a href="/" style="color: #E8F5E8;">Ana Sayfa</a></li>
                      <li><a href="about-us.html" style="color: #E8F5E8;">Hakkımızda</a></li>
                      <li><a href="contact.html" style="color: #E8F5E8;">İletişim</a></li>
                 
@@ -445,7 +400,6 @@
                </div>
             </div>
 
-            <!-- Footer Card -->
             <div class="col-12 col-md">
                <div class="footer-card">
                   <h4 class="mb-4" style="color: #FFFFFF;">İletişim</h4>
@@ -475,16 +429,13 @@
          </div>
       </div>
 
-      <!-- Copyright -->
       <div class="copyright-section style-two" style="background-color: #174035;">
          <div class="container">
             <div class="d-flex flex-wrap justify-content-center align-items-center justify-content-md-between gap-3 gap-lg-4">
-               <!-- Copyright -->
                <p class="mb-0 copyright justify-content-center justify-content-md-end" style="color: #E8F5E8;"><span id="year">2025</span> © 
                   <a href="#" style="color: #FFFFFF;">ReelRusher</a>
                   Tüm hakları saklıdır.</p>
 
-               <!-- Copyright Nav -->
                <ul class="copyright-nav style-two justify-content-center list-unstyled d-flex flex-wrap gap-3 gap-lg-4">
                   <li><a href="privacy-policy.html" style="color: #E8F5E8;">Gizlilik ve Çerez Politikası</a></li>
                   <li><a href="terms-of-use.html" style="color: #E8F5E8;">Kullanım Koşulları</a></li>
@@ -494,14 +445,12 @@
       </div>
    </footer>
 
-   <!-- Cookie Alert -->
    <div class="cookiealert shadow-lg">
       <h4 class="text-white"><i class="ti ti-cookie"></i> Cookie Alert</h4>
       <p class="mb-4 text-white">Web sitemizde en iyi deneyimi yaşamanız için çerezleri kullanıyoruz. Devam ederek çerez kullanımını kabul etmiş olursunuz. <a href="privacy-policy.html" target="_blank"> Çerez Politikası</a></p>
       <button class="btn btn-dark btn-sm acceptcookies" type="button" aria-label="Close">Accept</button>
    </div>
 
-   <!-- Scroll To Top -->
    <button id="scrollTopButton" class="fandi-scrolltop scrolltop-hide">
       <i class="ti ti-arrow-up"></i>
    </button>
