--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -7,7 +7,6 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <meta name="robots" content="index, follow">
 
-   <!-- Open Graph Meta Tags -->
    <meta property="og:title" content="Kullanım Koşulları | ReelRusher">
    <meta property="og:description" content="ReelRusher kullanım şartları ve koşulları. Oyun kullanımı için gerekli yasal bilgiler.">
    <meta property="og:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
@@ -16,7 +15,6 @@
    <meta property="og:site_name" content="ReelRusher">
    <meta property="og:locale" content="tr_TR">
 
-   <!-- Twitter Card Meta Tags -->
    <meta name="twitter:card" content="summary_large_image">
    <meta name="twitter:title" content="Kullanım Koşulları | ReelRusher">
    <meta name="twitter:description" content="ReelRusher kullanım şartları ve koşulları. Oyun kullanımı için gerekli yasal bilgiler.">
@@ -24,24 +22,19 @@
    <meta name="twitter:site" content="@reelrusher">
    <meta name="twitter:creator" content="@reelrusher">
 
-   <!-- Title -->
    <title>Kullanım Koşulları - ReelRusher</title>
 
-   <!-- Favicon -->
    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
 
-   <!-- CSS Files -->
    <link rel="stylesheet" href="assets/main-B9xypkzf.css">
    <link rel="stylesheet" href="assets/cookie-consent.css">
    <script src="assets/cookie-consent.js"></script>
 
-   <!-- Meta Tags -->
    <meta name="description" content="ReelRusher kullanım koşulları ve hizmet şartları. Oyunu kullanmadan önce lütfen okuyun.">
    <meta name="keywords" content="kullanım koşulları, hizmet şartları, ReelRusher, oyun kuralları">
 </head>
 
 <body>
-   <!-- Preloader -->
    <div class="preloader" id="preloader">
       <div class="spinner-grow" role="status">
          <span class="visually-hidden">Yükleniyor...</span>
@@ -49,13 +42,10 @@
    </div>
 
    
-   <!-- Header Area -->
    <header class="header-area">
-      <!-- Header Top -->
       <div class="header-top">
          <div class="container h-100">
             <div class="h-100 d-flex align-items-center justify-content-between">
-               <!-- Left Side Content -->
                     <div class="left-side d-flex align-items-center gap-2 gap-md-3 gap-lg-4">
                      <div class="d-flex align-items-center gap-1">
                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewbox="0 0 18 18" fill="none">
@@ -85,30 +75,25 @@
                      </div>
                     </div>
 
-               <!-- Right Side Content -->
              
             </div>
          </div>
       </div>
 
-      <!-- Navbar -->
       <div class="container">
          <nav class="navbar navbar-expand-xl">
-            <!-- Navbar Brand -->
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/">
                <img src="assets/nav-brand.png" alt="ReelRusher" style="width: auto; height: 60px;">
             </a>
 
-            <!-- Navbar Toggler -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#fandiNav" aria-controls="fandiNav" aria-expanded="false" aria-label="Toggle navigation">
                <i class="ti ti-menu-deep"></i>
             </button>
 
-            <!-- Navbar Nav -->
             <div class="collapse navbar-collapse justify-content-end" id="fandiNav">
                <ul class="navbar-nav align-items-xl-center navbar-nav-scroll mt-4 mt-xl-0">
                   <li>
-                     <a href="index.html">Ana Sayfa</a>
+                     <a href="/">Ana Sayfa</a>
                   </li>
                   <li class="fandi-dd">
                      <a href="#">Oyun Hakkında <i class="ti ti-chevron-down"></i></a>
@@ -143,31 +128,25 @@
       </div>
    </header>
 
-   <!-- Breadcrumb Section -->
    <div class="breadcrumb-section bg-img jarallax">
       <img class="jarallax-img" src="assets/73-WKNjS6Ql.jpg" alt="">
 
       <div class="container">
-         <!-- Divider -->
          <div class="divider"></div>
 
-         <!-- Breadcrumb Content -->
          <div class="breadcrumb-content">
             <h2>Kullanım Koşulları</h2>
             <ul class="list-unstyled">
-               <li><a href="index.html">Ana Sayfa</a></li>
+               <li><a href="/">Ana Sayfa</a></li>
                <li>Kullanım Koşulları</li>
             </ul>
          </div>
       </div>
 
-      <!-- Divider -->
       <div class="divider"></div>
    </div>
 
-   <!-- Terms of Use Content -->
    <section class="terms-of-use-section">
-      <!-- Divider -->
       <div class="divider"></div>
 
       <div class="container">
@@ -231,21 +210,17 @@
          </div>
       </div>
 
-      <!-- Divider -->
       <div class="divider"></div>
    </section>
 
-   <!-- Footer Section -->
    <footer class="footer-section" style="background-color: #174035;">
-      <!-- Divider -->
       <div class="divider"></div>
 
       <div class="container">
          <div class="row g-5">
-            <!-- Footer Card -->
             <div class="col-12 col-md-4">
                <div class="footer-card">
-                  <a href="index.html" class="footer-logo mb-4">
+                  <a href="/" class="footer-logo mb-4">
                      <img src="assets/nav-brand-footer.png" alt="ReelRusher">
                   </a>
                   <p style="color: #E8F5E8;">ReelRusher - Match-3 ve Zuma mekaniklerini birleştiren, piramit şeklinde tahta ile benzersiz bir puzzle oyun deneyimi.</p>
@@ -253,7 +228,6 @@
                </div>
             </div>
 
-            <!-- Footer Card -->
             <div class="col-12 col-md">
                <div class="footer-card">
                   <h4 class="mb-4" style="color: #FFFFFF;">Oyun Hakkında</h4>
@@ -267,12 +241,11 @@
                </div>
             </div>
 
-            <!-- Footer Card -->
             <div class="col-12 col-md">
                <div class="footer-card">
                   <h4 class="mb-4" style="color: #FFFFFF;">Faydalı Bağlantılar</h4>
                   <ul class="list-unstyled footer-nav-two">
-                     <li><a href="index.html" style="color: #E8F5E8;">Ana Sayfa</a></li>
+                     <li><a href="/" style="color: #E8F5E8;">Ana Sayfa</a></li>
                      <li><a href="about-us.html" style="color: #E8F5E8;">Hakkımızda</a></li>
                      <li><a href="contact.html" style="color: #E8F5E8;">İletişim</a></li>
                 
@@ -280,7 +253,6 @@
                </div>
             </div>
 
-            <!-- Footer Card -->
             <div class="col-12 col-md">
                <div class="footer-card">
                   <h4 class="mb-4" style="color: #FFFFFF;">İletişim</h4>
@@ -310,16 +282,13 @@
          </div>
       </div>
 
-      <!-- Copyright -->
       <div class="copyright-section style-two" style="background-color: #174035;">
          <div class="container">
             <div class="d-flex flex-wrap justify-content-center align-items-center justify-content-md-between gap-3 gap-lg-4">
-               <!-- Copyright -->
                <p class="mb-0 copyright justify-content-center justify-content-md-end" style="color: #E8F5E8;"><span id="year">2025</span> © 
                   <a href="#" style="color: #FFFFFF;">ReelRusher</a>
                   Tüm hakları saklıdır.</p>
 
-               <!-- Copyright Nav -->
                <ul class="copyright-nav style-two justify-content-center list-unstyled d-flex flex-wrap gap-3 gap-lg-4">
                   <li><a href="privacy-policy.html" style="color: #E8F5E8;">Gizlilik ve Çerez Politikası</a></li>
                   <li><a href="terms-of-use.html" style="color: #E8F5E8;">Kullanım Koşulları</a></li>
@@ -329,19 +298,16 @@
       </div>
    </footer>
 
-   <!-- Cookie Alert -->
    <div class="cookiealert shadow-lg">
       <h4 class="text-white"><i class="ti ti-cookie"></i> Çerez Uyarısı</h4>
       <p class="mb-4 text-white">Web sitemizde en iyi deneyimi yaşamanız için çerezleri kullanıyoruz. Devam ederek çerez kullanımını kabul etmiş olursunuz. <a href="privacy-policy.html" target="_blank">Çerez Politikası</a> için tıklayın.</p>
       <button class="btn btn-dark btn-sm acceptcookies" type="button" aria-label="Close">Kabul Et</button>
    </div>
 
-   <!-- Scroll To Top -->
    <button id="scrollTopButton" class="fandi-scrolltop scrolltop-hide">
       <i class="ti ti-arrow-up"></i>
    </button>
 
-   <!-- JS Files -->
    <script src="assets/main-DwB1b1zN.js"></script>
 
 </body>
